--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,11 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.0",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
   },
@@ -26,8 +28,10 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.20",
     "@types/pg": "^8.11.2",
     "@types/uuid": "^9.0.8",
