--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.0",
     "pg": "^8.11.3",
+    "sharp": "^0.33.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.20",
     "@types/pg": "^8.11.2",
+    "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
