--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-sesssion": "^1.15.5",
     "google-auth-library": "^9.11.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.0",
@@ -35,8 +36,9 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.11.20",
+    "@types/node": "^20.14.11",
     "@types/pg": "^8.11.2",
     "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.8",
