Delte old card component implement backend for friendsip

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,6 +16,8 @@
       "@shared/*": ["../../shared/*"]
     }
   },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"],
   "ts-node": {
     "transpileOnly": true
   }
