--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "^18.1.1",
     "@angular/ssr": "^18.1.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
