--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,10 +10,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "resolveJsonModule": true,
-    "paths": {
-      "@shared/*": ["../../../shared/*"]
-    }
+    "resolveJsonModule": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"],
