--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^18.1.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "client": "file:",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
