--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,14 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch 'src/**' --ext 'ts,json' --exec node --no-warnings --loader ts-node/esm src/app.ts",
+    "start": "node --no-warnings --loader ts-node/esm src/app.ts",
     "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "...",
   "license": "ISC",
   "dependencies": {
+    "api-server": "file:",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -47,7 +48,6 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "nodemon": "^3.1.4",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
