--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node --no-warnings --loader ts-node/esm src/app.ts",
+    "start": "nodemon --watch 'src/**' --ext 'ts,json' --exec node --no-warnings --loader ts-node/esm src/app.ts",
     "lint": "eslint . --ext .ts"
   },
   "keywords": [],
@@ -40,6 +40,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.11",
+    "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.2",
     "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.8",
@@ -48,6 +49,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^3.1.4",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
