--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch 'src/**' --ext 'ts,json' --exec node --no-warnings --loader ts-node/esm src/app.ts",
+    "start": "node --no-warnings --loader ts-node/esm src/app.ts",
+    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --exec node --no-warnings --loader ts-node/esm src/app.ts",
     "lint": "eslint . --ext .ts"
   },
   "keywords": [],
