--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "node",
-    "noEmit": true,
+    "outDir": "./dist", // Ausgabeordner für kompilierte JS-Dateien
     "strict": true,
     "sourceMap": true,
     "esModuleInterop": true,
@@ -13,8 +13,5 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"],
-  "ts-node": {
-    "transpileOnly": true
-  }
+  "exclude": ["node_modules"]
 }
