--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "prod": "node dist/app.js",
     "start": "nodemon --watch 'src/**' --ext 'ts,json' --exec node --no-warnings --loader ts-node/esm src/app.ts",
     "lint": "eslint . --ext .ts"
   },
