--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.5.0",
     "pg": "^8.11.3",
     "sharp": "^0.33.4",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
