--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "client": "file:",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
