--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "google-auth-library": "^9.11.0",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.0",
     "pg": "^8.11.3",
@@ -40,6 +41,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.7",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.11",
