--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.0",
+    "nodemailer": "^6.9.15",
     "pg": "^8.11.3",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
@@ -45,6 +46,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.11",
+    "@types/nodemailer": "^6.4.15",
     "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.2",
     "@types/sharp": "^0.32.0",
