Introduce shared folder + refactor exercise controller

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,7 +10,10 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "@shared/*": ["../shared/*"]
+    }
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
