--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^4.4.3",
     "client": "file:",
     "express": "^4.18.2",
+    "hammerjs": "^2.0.8",
     "ngx-image-cropper": "^8.0.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
