--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "api-server": "file:",
     "bcryptjs": "^2.4.3",
+    "chartjs-node-canvas": "^4.1.6",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
