--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,3 @@
-# Autor: Prof. Dr. Norman Lahme-Hütig (FH Münster) 
-
 # Packages
 node_modules/
 
@@ -12,5 +10,9 @@ coverage/
 .env
 
 dist
+
+
+
+logs/*.log
 
 
