--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "express-sesssion": "^1.15.5",
     "google-auth-library": "^9.11.0",
     "gridfs-stream": "^1.1.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
