--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "author": "...",
   "license": "ISC",
   "dependencies": {
+    "@types/express-rate-limit": "^6.0.0",
     "api-server": "file:",
     "bcryptjs": "^2.4.3",
     "chartjs-node-canvas": "^4.1.6",
@@ -23,6 +24,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.4.0",
     "express-sesssion": "^1.15.5",
     "google-auth-library": "^9.11.0",
     "gridfs-stream": "^1.1.1",
