--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
+    "web-push": "^3.6.7",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -58,6 +59,7 @@
     "@types/pg": "^8.11.2",
     "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.8",
+    "@types/web-push": "^3.6.3",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
