--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,7 @@
     "nodemailer": "^6.9.15",
     "pg": "^8.11.3",
     "sharp": "^0.33.4",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.8.0",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7",
     "winston": "^3.14.2",
@@ -58,6 +58,7 @@
     "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.2",
     "@types/sharp": "^0.32.0",
+    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^9.0.8",
     "@types/web-push": "^3.6.3",
     "@types/winston": "^2.4.4",
