--- a/client/angular.json
+++ b/client/angular.json
@@ -42,6 +42,11 @@
                 "glob": "notification-manager.js",
                 "input": "src",
                 "output": "/"
+              },
+              {
+                "glob": "web-socket-manager.js",
+                "input": "src",
+                "output": "/"
               }
             ],
             "styles": ["node_modules/bootstrap/dist/css/bootstrap.min.css", "src/styles.scss"],
