--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "client": "file:",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "hammerjs": "^2.0.8",
     "ngx-image-cropper": "^8.0.0",
@@ -41,7 +42,7 @@
     "@angular/cli": "^18.1.1",
     "@angular/compiler-cli": "^18.1.1",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.18.0",
+    "@types/node": "^18.19.55",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jasmine-core": "~5.1.0",
@@ -51,6 +52,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "webpack": "^5.95.0"
   }
 }
