--- a/nest-server/package.json
+++ b/nest-server/package.json
@@ -39,6 +39,7 @@
     "nest-server": "file:",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "uuid": "^10.0.0",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^10.0.0",
     "@types/web-push": "^3.6.3",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
