--- a/nest-server/package.json
+++ b/nest-server/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "google-auth-library": "^9.14.2",
+    "helmet": "^8.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.7.2",
     "nest-server": "file:",
