--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.21",
     "ngx-image-cropper": "^8.0.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.0",
@@ -42,6 +43,7 @@
     "@angular/cli": "^18.1.1",
     "@angular/compiler-cli": "^18.1.1",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^18.19.55",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
