--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@angular/service-worker": "^18.1.1",
     "@angular/ssr": "^18.1.1",
     "bootstrap": "^5.3.3",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.3",
     "client": "file:",
     "dotenv": "^16.4.5",
@@ -42,6 +43,7 @@
     "@angular-devkit/build-angular": "^18.1.1",
     "@angular/cli": "^18.1.1",
     "@angular/compiler-cli": "^18.1.1",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.17.12",
     "@types/node": "^18.19.55",
