--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,7 +1,4 @@
 {
-  "printWidth": 120,
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "all"
 }
